# dumb-scrypt-wasm

./: Cargo.toml  README.md
src/: lib.rs
