[package]
name = "dumb-scrypt-wasm"
description = "Dumb, but easily verifiable implementation of scrypt"
version = "1.0.0"
authors = ["Fedor Indutny <fedor@indutny.com>"]
categories = ["cryptography"]
keywords = ["crypto","scrypt"]
repository = "https://github.com/indutny/dumb-scrypt-wasm"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
dumb-crypto = "^2.0.0"
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
lto = true
